--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
 
   flutter_screenutil: ^5.5.3+2
   flutter_svg: ^1.1.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
